--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                      <option value="20">20%-Better</option>
                      <option value="30">30%-OUTSTANDING</option>
                  </select><br><br>
-                 <label for="person" class="questions">How many people are sharing the bill?</label>
+                 <label for="person" class="questions">Domnt want to share?</label>
                  <br><br>
                  <input type="text" name="person" id="person" value="0" class="input" required>
                  <br><br>
